# blogging-site

./: README.md
backend/authenticate/: Cargo.toml
backend/authenticate/src/: main.rs
backend/authenticate/src/routes/: callback.rs  mod.rs  protected.rs  request.rs
backend/blog/: Cargo.toml
backend/blog/src/: blog.rs  main.rs
backend/blog/src/routes/: draft.rs  drafts.rs  edit.rs  get.rs  hide.rs  list.rs  mod.rs  upload.rs
backend/cdn/: Cargo.toml
backend/cdn/src/: main.rs
backend/cdn/src/routes/: get.rs  mod.rs
backend/user/: Cargo.toml
backend/user/src/: lib.rs
