[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = "1.0.210"
user = { path = "../user", version = "0.1.0" }
mongodb = "3.1.0"
actix-session = { version = "0.10.1", features = ["redis-session", "redis-pool"] }
rand = "0.8.5"
chrono = "0.4.38"
serde_json = "1.0.128"
futures = "0.3.30"
