[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
actix-session = "0.10.1"
pwhash = "1.0.0"
uuid = { version = "1.10.0", features = ["v4"] }
actix-web = "4.9.0"
